--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
             </div>
             
             <div class="simple-item">
-                <div class="item-title">Lumetica</div>
-                <div class="item-desc">Founding Advisor. CDMO automation infrastructure for biologics manufacturing.</div>
+                <div class="item-title">Project Aether</div>
+                <div class="item-desc">Co-founder. microscopic robots</div>
                 <div class="item-meta">Active</div>
             </div>
         </div>
